fixed login page layout on iphone4

--- a/frontend/style/css/graph.css
+++ b/frontend/style/css/graph.css
@@ -11,13 +11,18 @@ html {
 
 body, #react-view {
   background-color: rgba(0,0,0,0);
+  margin: 0px ;
+}
+
+body {
 }
 
 #react-view {
   /*min-height: 320px !important;*/
   /*.background-splash {*/
-   height: 100% !important;
-   min-height: 320px;
+
+  height: 100% !important;
+  min-height: 320px;
    /*background-image: url("../../../public/assets/images/HMEsplash.png");*/
 /*}*/
 }
@@ -172,9 +177,9 @@ body, #react-view {
   width: 95%;
   overflow-x: hidden;
   min-height: 240px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: rgba(255,255,255,0.5);
